welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: '(' expected but identifier found.
  while fini()==false{
        ^SnakeBuggle:6: error: illegal start of simple expression
}
^